--- a/Assets/global/master.html
+++ b/Assets/global/master.html
@@ -6,7 +6,7 @@
     <!--@js{jQuery-2.1.4.min}-->
 </head>
 <body class="skin-blue layout-top-nav">
-<div class="wrapper">
+<section class="wrapper">
     <header class="main-header">
         <nav class="navbar navbar-static-top">
             <div class="container">
@@ -41,7 +41,10 @@
         </nav>
     </header>
 
-    {CONTENT}
+    <section class="content">
+        {CONTENT}
+    </section>
+
 
     <footer class="main-footer">
         <div class="container">
@@ -50,6 +53,6 @@
             </div>
         </div>
     </footer>
-</div>
+</section>
 </body>
 </html>
